src/objects/BHAT_Archived__c.object
<CustomObject>
    <description>BHAT Backup for Finance &amp; HR for year 2013,2014,2015</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Daily_ID__c</fullName>
        <label>BHAT Activity Daily ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Daily_Name__c</fullName>
        <label>BHAT Activity Daily Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_ID__c</fullName>
        <label>BHAT Activity ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Month__c</fullName>
        <formula>TEXT(MONTH(Activity_Date__c))</formula>
        <label>BHAT Activity Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Name__c</fullName>
        <label>BHAT Activity Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Note_Name__c</fullName>
        <label>BHAT Activity Note Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Weekly_ID__c</fullName>
        <label>BHAT Activity Weekly ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Activity_Year__c</fullName>
        <formula>TEXT(YEAR(Activity_Date__c))</formula>
        <label>BHAT Activity Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Code_and_Short_Desc__c</fullName>
        <label>BHAT Code and Short Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Owner_ID__c</fullName>
        <label>BHAT Owner ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Sub_Category_Other__c</fullName>
        <label>BHAT Sub Category Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BHAT_Week__c</fullName>
        <label>BHAT Week</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Export_Date__c</fullName>
        <label>Backup Export Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daily_Status__c</fullName>
        <label>Daily Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <label>Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EEID__c</fullName>
        <label>EEID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <label>Manager Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPEIU_Graveyard_Swing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPEIU Graveyard/Swing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <description>Review Notes</description>
        <label>Review Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <label>Review Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <label>Reviewed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_End_Date__c</fullName>
        <label>Week End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Status__c</fullName>
        <label>Weekly Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>BHAT Archived</label>
    <nameField>
        <displayFormat>BHAT-{0000}</displayFormat>
        <label>BHAT Archived Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BHAT Archived</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>